Fix line breaking overflow issue

--- a/src/css/general/_base.scss
+++ b/src/css/general/_base.scss
@@ -18,7 +18,7 @@ $ui-header-height: $size-10;
 
     .ui-column-header{
         @include block;
-        height:$ui-header-height;
+        min-height:$ui-header-height;
         background:inherit;
         box-shadow: 0px 3px 5px -5px rgba(0, 0, 0, 0.3);
 
